Added an add user endpoint to test user related requests. Added a fix to the tsoa.json since the /api path was not added when sending requests resulting in 404 errors getting returned
